# EaseAI

./: .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  env_example.txt  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3307ce2dd132_initial_migration.py  8968f218bc90_update_sql_models.py  9e79ed7813fc_change_duration_to_string.py  cd850114fa3e_replace_slides_json_with_individual_.py
demo/: package-lock.json  package.json  tailwind.config.js
demo/public/: index.html
demo/src/: App.js  index.css
demo/src/components/: ChatSection.js  PresentationPlan.js  Sidebar.js  SlideViewer.js  SlidesSection.js
docs/: api-schema.yaml
scripts/: __init__.py  debug.py  test_setup.py
src/: __init__.py  app.py  main.py  presentation_agent.py
src/agents/: __init__.py  agent.py  config.py  state.py  workflow_agent.py
src/agents/nodes/: __init__.py  call_tool.py  chat_node.py  content_node.py  conversation_node.py  delivery_tutorial.py  outline.py  planner.py  planner_node.py  review_node.py  slide.py  slide_generator.py  speaker_notes.py  update_plan.py  write_results.py
src/agents/tools/: __init__.py  update_plan.py  update_plan_tool.py
src/database/: __init__.py  delivery_tutorial_adapter.py  messages_adapter.py  presentation_plan_adapter.py  projects_adapter.py  slides_adapter.py  speaker_notes_adapter.py  sql_models.py
src/easeai/: app.py  logger.py  main.py
src/easeai/database/: sql_models.py
src/easeai/routes/: __init__.py
src/easeai/types/: base.py
src/easeai/utils/: logger.py
src/routes/: __init__.py  delivery_tutorial.py  diagnostics.py  documents.py  messages.py  plan.py  projects.py  slides.py  speaker_notes.py
src/templates/: index.html  presentation.html
src/types/: __init__.py  delivery_tutorial.py  document.py  message.py  plan.py  project.py  slides.py  speaker_notes.py
src/utils/: __init__.py  logger.py
tests/: test_logger.py  test_main.py
